--- a/db_to_ml_pickle.ipynb
+++ b/db_to_ml_pickle.ipynb
@@ -303,9 +303,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\Eom\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\category_encoders\\one_hot.py:145: FutureWarning: iteritems is deprecated and will be removed in a future version. Use .items instead.\n",
+      "c:\\Users\\Eom\\anaconda3\\envs\\test1\\lib\\site-packages\\category_encoders\\one_hot.py:145: FutureWarning: iteritems is deprecated and will be removed in a future version. Use .items instead.\n",
       "  for cat_name, class_ in values.iteritems():\n",
-      "c:\\Users\\Eom\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\category_encoders\\one_hot.py:145: FutureWarning: iteritems is deprecated and will be removed in a future version. Use .items instead.\n",
+      "c:\\Users\\Eom\\anaconda3\\envs\\test1\\lib\\site-packages\\category_encoders\\one_hot.py:145: FutureWarning: iteritems is deprecated and will be removed in a future version. Use .items instead.\n",
       "  for cat_name, class_ in values.iteritems():\n"
      ]
     }
@@ -340,7 +340,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.13 64-bit",
+   "display_name": "test1",
    "language": "python",
    "name": "python3"
   },
@@ -354,12 +354,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.8.15"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "6d0abf850e81987d3f0887b34babc953ec274d673efe8c78f660b9266faad2c6"
+    "hash": "2823fa4f45f93ee0fdc80a5fa6a892242c927ad5f96174d46b5f94417aa2790c"
    }
   }
  },
